# aquila

./: .gitignore  .gitmodules  CMakeLists.txt
aquila/transform/: FftFactory.cpp  FftFactory.h  KissFft.cpp  KissFft.h  Mfcc.cpp  Mfcc.h
examples/: CMakeLists.txt
examples/wave_mfcc/: CMakeLists.txt  wave_mfcc.cpp
lib/: CMakeLists.txt
tests/: CMakeLists.txt
tests/transform/: KissFft.cpp
